2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* set the aspect ratio
	* code cleanup and comments added

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* added various new models

2005-02-10  Erik Hjortsberg  <erik@katastrof.nu>

	* moved widgets to a separate object archive
	* added double click actions to server browser and server widget
	* mask password
	* began work on create avatar widget
	* added Performance, a widget to show fps and other related info
	This widget uses the new scheme where the definition is in a file suffixed with .widget

2005-02-04  Erik Hjortsberg  <erik@katastrof.nu>

	* don't make ember a requirement for the media rpm; people might want to compile ember by their own and use the media rpm as a convenience

2005-02-03  Erik Hjortsberg  <erik@katastrof.nu>

	* Check for eris 1.3.3

2005-02-02  Erik Hjortsberg  <erik@katastrof.nu>

	* removed obsolete files
	* added spec file for media

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix for config files

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes for Eris-1.3.3

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Added newline at end of files.
	* Fix include of Ogre.h

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix for config files.
	* Use /usr/lib/OGRE as default path for plugins.

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* Fix depends
	* Fix for config files

2005-01-30  Erik Hjortsberg  <erik@katastrof.nu>

	* delay inclusion of SDL headers in order not to confuse autoconf

2005-01-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Added tahoma-10 font definition.
	* Changed default resolution to 1024x768

2005-01-23  Erik Hjortsberg  <erik@katastrof.nu>

	* Make default mouse movement factor greater
	* Reworked the way widgets are loaded. Now each widget is associated to a string (a name). This allows us to use text files for defining which widgets should be loaded for which game type etc.
	* Added more error checks to Model.
